--- a/rabbit-parent/esjob/src/main/resources/application.properties
+++ b/rabbit-parent/esjob/src/main/resources/application.properties
@@ -9,22 +9,26 @@ zookeeper.sessionTimeout=10000
 zookeeper.maxRetries=3
 
 
-simpleJob.cron=0/5 * * * * ?
+simpleJob.cron=0/30 * * * * ?
 #simpleJob.cron=00 03 21 * * ?
 simpleJob.shardingTotalCount=5
 simpleJob.shardingItemParameters=0=beijing,1=shanghai,2=changchun,3=changsha,4=hangzhou
 simpleJob.jobParameter=source1=public,source2=private
 simpleJob.failover=true
 simpleJob.monitorExecution=true
-simpleJob.monitorPort=8889
+simpleJob.monitorPort=8899
 simpleJob.maxTimeDiffSeconds=-1
 simpleJob.jobShardingStrategyClass=com.dangdang.ddframe.job.lite.api.strategy.impl.AverageAllocationJobShardingStrategy
 
+dataflowJob.cron=0/10 * * * * ?
+dataflowJob.shardingTotalCount=2
+dataflowJob.shardingItemParameters=0=Beijing,1=Shanghai
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/elasticjob?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&zeroDateTimeBehavior=convertToNull&serverTimezone=UTC
+
+spring.datasource.url=jdbc:mysql://146.56.248.2:3306/elasticjob?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&zeroDateTimeBehavior=convertToNull&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=Wxc123!@#
 
 
