V3-17 定时任务通用组件封装-2-3-4-5

--- a/rabbit-parent/esjob/pom.xml
+++ b/rabbit-parent/esjob/pom.xml
@@ -76,6 +76,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.fight.rabbit</groupId>
+            <artifactId>rabbit-task</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
