--- a/rabbit-parent/esjob/src/main/resources/application.properties
+++ b/rabbit-parent/esjob/src/main/resources/application.properties
@@ -1,28 +1,30 @@
 
 server.port=8881
 
+elastic.job.zk.namespace=elastic-job
+elastic.job.zk.serverLists=152.136.26.95:2181
 
-zookeeper.address=152.136.26.95:2181
-zookeeper.namespace=elastic-job
-zookeeper.connectionTimeout=10000
-zookeeper.sessionTimeout=10000
-zookeeper.maxRetries=3
-
-
-simpleJob.cron=0/30 * * * * ?
-#simpleJob.cron=00 03 21 * * ?
-simpleJob.shardingTotalCount=5
-simpleJob.shardingItemParameters=0=beijing,1=shanghai,2=changchun,3=changsha,4=hangzhou
-simpleJob.jobParameter=source1=public,source2=private
-simpleJob.failover=true
-simpleJob.monitorExecution=true
-simpleJob.monitorPort=8899
-simpleJob.maxTimeDiffSeconds=-1
-simpleJob.jobShardingStrategyClass=com.dangdang.ddframe.job.lite.api.strategy.impl.AverageAllocationJobShardingStrategy
-
-dataflowJob.cron=0/10 * * * * ?
-dataflowJob.shardingTotalCount=2
-dataflowJob.shardingItemParameters=0=Beijing,1=Shanghai
+#zookeeper.address=152.136.26.95:2181
+#zookeeper.namespace=elastic-job
+#zookeeper.connectionTimeout=10000
+#zookeeper.sessionTimeout=10000
+#zookeeper.maxRetries=3
+#
+#
+#simpleJob.cron=0/30 * * * * ?
+##simpleJob.cron=00 03 21 * * ?
+#simpleJob.shardingTotalCount=5
+#simpleJob.shardingItemParameters=0=beijing,1=shanghai,2=changchun,3=changsha,4=hangzhou
+#simpleJob.jobParameter=source1=public,source2=private
+#simpleJob.failover=true
+#simpleJob.monitorExecution=true
+#simpleJob.monitorPort=8899
+#simpleJob.maxTimeDiffSeconds=-1
+#simpleJob.jobShardingStrategyClass=com.dangdang.ddframe.job.lite.api.strategy.impl.AverageAllocationJobShardingStrategy
+#
+#dataflowJob.cron=0/10 * * * * ?
+#dataflowJob.shardingTotalCount=2
+#dataflowJob.shardingItemParameters=0=Beijing,1=Shanghai
 
 
 
